present sorted curricularCourses in NotNeedToEnroll interfaces